[package]
name = "crankshaft-monitoring-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }  # Async runtime
tui = "0.19"                                   # Terminal UI library
crossterm = "0.26"                             # Cross-platform terminal handling
serde = { version = "1.0", features = ["derive"] } # Serialization/deserialization
serde_json = "1.0"                             # JSON support
reqwest = { version = "0.11", features = ["json"] } # HTTP client for API calls (if needed)
